style: modal top bar and overflow fixes

--- a/src/styles/components/SubmissionViewer.scss
+++ b/src/styles/components/SubmissionViewer.scss
@@ -100,7 +100,6 @@
   transform: scale(0);
   transition: all 0.3s cubic-bezier(0.23, 1.5, 0.32, 1),
     opacity 0.3s cubic-bezier(0.23, 1.5, 0.32, 1);
-  overflow-y: scroll;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -121,7 +120,7 @@
     position: absolute;
     top: 0;
     left: 0;
-    //   height: 10vh;
+    padding: 0 72px;
 
     .close-btn {
       color: $text-gray-light;
@@ -129,26 +128,31 @@
       border: none;
       font-family: 'Open Sans', 'Helvetica Neue', sans-serif;
       text-transform: uppercase;
-      font-size: 14px;
-      font-weight: 600;
+      font-size: 15px;
+      font-weight: 500;
       line-height: 21px;
+      margin: 0;
+      display: flex;
+      align-items: center;
+      justify-content: space-evenly;
+
+      span {
+        padding-left: 5px;
+      }
     }
   }
 
   &__content {
     position: fixed;
-    bottom: 0;
-    left: 0;
-    background-color: #ffff;
-    width: 100%;
-    //   height: 100%;
     top: 100px;
+    left: 0;
     bottom: 200px;
+    width: 100%;
+    background-color: #ffff;
     display: flex;
     justify-content: center;
     align-items: center;
-    overflow-y: scroll;
-    overflow-x: scroll;
+    overflow-y: auto;
   }
 
   &__bottom-bar {
@@ -183,6 +187,8 @@
       border-radius: 8px;
       font-size: 19px;
       line-height: 24px;
+      display: flex;
+      align-items: center;
       color: $black-border;
     }
   }
